<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/business_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_weight="4"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/local_shop" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="8dp"
        android:layout_weight="3.5">
        <TextView
            android:id="@+id/business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/shop_name" />

        <ImageView
            android:id="@+id/business_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/business_name"
            android:padding="2dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/business_location"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/business_name"
            android:text="@string/location_details" />

        <ImageView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/business_location"
            android:padding="2dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@android:drawable/ic_menu_call" />

        <TextView
            android:id="@+id/text_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/contact"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/text_location"
            android:text="@string/contact_details" />
        <ImageView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:padding="2dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/hours_"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/text_contact"
            android:text="@string/email_text" />
        <ImageView
            android:id="@+id/hours_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:padding="2dp"
            android:layout_marginBottom="4dp"
            app:srcCompat="@android:drawable/ic_menu_week" />

        <TextView
            android:id="@+id/text_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/hours_"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/text_email"
            android:text="@string/work_hours" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/about_us"/>
        <TextView
            android:id="@+id/text_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:text="@string/about_text"/>
    </RelativeLayout>
</LinearLayout>